# set

./: .gitignore  CHANGELOG.md  README.md  advanced_features_plan.md  env.example  eslint.config.js  index.html  main_plan_build.md  package.json  plan.md  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.scripts.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts  vitest.setup.js  vitest.setup.ts
.github/workflows/: README.md  ci.yml
docs/: architecture.md  logic_product.md  notifications.md  operations.md  planning-debt-schedules.md  settings-theming-fix.md  testing.md  transactions.md
prisma/: schema.prisma
prisma/prisma/: dev.db-journal
scripts/: seed.ts
src/: main.js  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: logging.rs  main.rs  secrets.rs  state.rs
src-tauri/src/commands/: budgets.rs  dashboard.rs  export.rs  goals.rs  import.rs  mod.rs  planning.rs  reminders.rs  reports.rs  settings.rs  sync.rs  transactions.rs
src-tauri/src/scheduler/: mod.rs
src-tauri/src/services/: mod.rs
src-tauri/src/services/budgets/: mod.rs  sqlite.rs
src-tauri/src/services/dashboard/: mod.rs
src-tauri/src/services/goals/: mod.rs  sqlite.rs
src-tauri/src/services/planning/: mod.rs
src-tauri/src/services/reminders/: mod.rs  sqlite.rs
src-tauri/src/services/reports/: mod.rs
src-tauri/src/services/settings/: mod.rs  sqlite.rs
src-tauri/src/services/sync/: mod.rs
src-tauri/src/services/transactions/: mod.rs  sqlite.rs
tests/: playwright.config.ts
(+171 files in other folders)
