[package]
name = "personal-finance-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-notification = "2.0.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
thiserror = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
windows = { version = "0.57", features = ["Win32_Foundation", "Win32_Security_Credentials"] }
url = "2"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
panic = "abort"
lto = true
opt-level = "z"
strip = true

